# open-ptc-agent

./: .env.example  .gitignore  LICENSE  PTC_Agent.ipynb  README.md  README_zh.md  config.yaml  langgraph.json  llms.json  pyproject.toml  utils.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONFIGURATION.md
libs/ptc-cli/: README.md  pyproject.toml
libs/ptc-cli/ptc_cli/: main.py
libs/ptc-cli/ptc_cli/agent/: __init__.py  lifecycle.py  management.py  persistence.py
libs/ptc-cli/ptc_cli/commands/: __init__.py  bash.py  slash.py
libs/ptc-cli/ptc_cli/core/: __init__.py  config.py  state.py  theme.py
libs/ptc-cli/ptc_cli/display/: help.py  rendering.py
libs/ptc-cli/ptc_cli/input/: prompt.py
libs/ptc-cli/ptc_cli/sandbox/: recovery.py
libs/ptc-cli/ptc_cli/streaming/: executor.py
src/agent/: __init__.py  agent.py  config.py  graph.py
src/agent/backends/: daytona.py
src/agent/middleware/: __init__.py  deepagent_middleware.py
src/agent/prompts/: __init__.py  formatter.py  loader.py
src/agent/subagents/: __init__.py  general.py  research.py
src/agent/tools/: __init__.py  utils.py
src/config/: __init__.py  agent.py  core.py  loaders.py  utils.py
src/ptc_core/: __init__.py  config.py  mcp_registry.py  sandbox.py  security.py  session.py  tool_generator.py
src/utils/: __init__.py  config_loader.py
src/utils/storage/: __init__.py  oss_uploader.py  r2_uploader.py  s3_uploader.py  storage_uploader.py
tests/: conftest.py
tests/integration/: test_execute_code_storage.py  test_grep_glob_sandbox.py  test_mcp_tool_transformation.py  test_search_effectiveness.py
tests/unit/: test_agent_prompt.py  test_bash_tool.py  test_export_sandbox.py  test_filesystem_tools.py  test_tool_exposure_modes.py  test_yfinance_mcp.py
(+18 files in other folders)
